Fix flex item alignment

--- a/assets/css/global/header.css
+++ b/assets/css/global/header.css
@@ -52,7 +52,7 @@
 
 .nav__bar {
   align-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -65,6 +65,7 @@
 }
 
 .nav__bar-flex-item-dropdown {
+  min-height: 57px;
   width: 25%;
 }
 
